Kaggle Notebook | Financial Tweets analysis practice | Version 14

--- a/financial-tweets-analysis-practice.ipynb
+++ b/financial-tweets-analysis-practice.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ca5479c",
+   "id": "a42c758f",
    "metadata": {
     "papermill": {
-     "duration": 0.006619,
-     "end_time": "2023-05-19T10:35:01.834884",
+     "duration": 0.004896,
+     "end_time": "2023-05-19T16:15:02.802255",
      "exception": false,
-     "start_time": "2023-05-19T10:35:01.828265",
+     "start_time": "2023-05-19T16:15:02.797359",
      "status": "completed"
     },
     "tags": []
@@ -20,19 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0aa32aea",
+   "id": "12595326",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:01.849366Z",
-     "iopub.status.busy": "2023-05-19T10:35:01.848956Z",
-     "iopub.status.idle": "2023-05-19T10:35:03.694520Z",
-     "shell.execute_reply": "2023-05-19T10:35:03.693339Z"
+     "iopub.execute_input": "2023-05-19T16:15:02.813042Z",
+     "iopub.status.busy": "2023-05-19T16:15:02.812672Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.332607Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.331605Z"
     },
     "papermill": {
-     "duration": 1.855604,
-     "end_time": "2023-05-19T10:35:03.696975",
+     "duration": 1.527741,
+     "end_time": "2023-05-19T16:15:04.334706",
      "exception": false,
-     "start_time": "2023-05-19T10:35:01.841371",
+     "start_time": "2023-05-19T16:15:02.806965",
      "status": "completed"
     },
     "tags": []
@@ -197,13 +197,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab70ee4f",
+   "id": "3c67687e",
    "metadata": {
     "papermill": {
-     "duration": 0.006466,
-     "end_time": "2023-05-19T10:35:03.710299",
+     "duration": 0.004469,
+     "end_time": "2023-05-19T16:15:04.344228",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.703833",
+     "start_time": "2023-05-19T16:15:04.339759",
      "status": "completed"
     },
     "tags": []
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49f4dd5",
+   "id": "1f58b792",
    "metadata": {
     "papermill": {
-     "duration": 0.006332,
-     "end_time": "2023-05-19T10:35:03.723238",
+     "duration": 0.004523,
+     "end_time": "2023-05-19T16:15:04.353380",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.716906",
+     "start_time": "2023-05-19T16:15:04.348857",
      "status": "completed"
     },
     "tags": []
@@ -232,19 +232,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a3e9abab",
+   "id": "3f8c7911",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:03.738321Z",
-     "iopub.status.busy": "2023-05-19T10:35:03.737914Z",
-     "iopub.status.idle": "2023-05-19T10:35:03.804141Z",
-     "shell.execute_reply": "2023-05-19T10:35:03.802987Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.364019Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.363654Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.406821Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.405521Z"
     },
     "papermill": {
-     "duration": 0.076715,
-     "end_time": "2023-05-19T10:35:03.806643",
+     "duration": 0.05083,
+     "end_time": "2023-05-19T16:15:04.408840",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.729928",
+     "start_time": "2023-05-19T16:15:04.358010",
      "status": "completed"
     },
     "tags": []
@@ -279,19 +279,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "93c9b7a7",
+   "id": "75d5bc90",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:03.822030Z",
-     "iopub.status.busy": "2023-05-19T10:35:03.821658Z",
-     "iopub.status.idle": "2023-05-19T10:35:03.826308Z",
-     "shell.execute_reply": "2023-05-19T10:35:03.825194Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.424474Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.424091Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.427857Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.427137Z"
     },
     "papermill": {
-     "duration": 0.015127,
-     "end_time": "2023-05-19T10:35:03.828792",
+     "duration": 0.014253,
+     "end_time": "2023-05-19T16:15:04.429886",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.813665",
+     "start_time": "2023-05-19T16:15:04.415633",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ced46585",
+   "id": "4f7d1abf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:03.845918Z",
-     "iopub.status.busy": "2023-05-19T10:35:03.843751Z",
-     "iopub.status.idle": "2023-05-19T10:35:03.852070Z",
-     "shell.execute_reply": "2023-05-19T10:35:03.850804Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.441403Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.441054Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.447048Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.446089Z"
     },
     "papermill": {
-     "duration": 0.018867,
-     "end_time": "2023-05-19T10:35:03.854560",
+     "duration": 0.014035,
+     "end_time": "2023-05-19T16:15:04.449067",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.835693",
+     "start_time": "2023-05-19T16:15:04.435032",
      "status": "completed"
     },
     "tags": []
@@ -343,19 +343,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c191374",
+   "id": "6b688ff3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:03.870971Z",
-     "iopub.status.busy": "2023-05-19T10:35:03.870413Z",
-     "iopub.status.idle": "2023-05-19T10:35:03.950754Z",
-     "shell.execute_reply": "2023-05-19T10:35:03.949535Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.460542Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.460238Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.514785Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.513595Z"
     },
     "papermill": {
-     "duration": 0.091398,
-     "end_time": "2023-05-19T10:35:03.953149",
+     "duration": 0.062724,
+     "end_time": "2023-05-19T16:15:04.516799",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.861751",
+     "start_time": "2023-05-19T16:15:04.454075",
      "status": "completed"
     },
     "tags": []
@@ -586,38 +586,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "4294dd11",
-   "metadata": {
-    "papermill": {
-     "duration": 0.00757,
-     "end_time": "2023-05-19T10:35:03.968228",
-     "exception": false,
-     "start_time": "2023-05-19T10:35:03.960658",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "# Unverified tweets"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "098f1108",
+   "id": "06677500",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:03.985057Z",
-     "iopub.status.busy": "2023-05-19T10:35:03.984686Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.011323Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.010182Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.530328Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.530002Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.551513Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.550543Z"
     },
     "papermill": {
-     "duration": 0.037651,
-     "end_time": "2023-05-19T10:35:04.013531",
+     "duration": 0.031125,
+     "end_time": "2023-05-19T16:15:04.553769",
      "exception": false,
-     "start_time": "2023-05-19T10:35:03.975880",
+     "start_time": "2023-05-19T16:15:04.522644",
      "status": "completed"
     },
     "tags": []
@@ -865,13 +848,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be3d077",
+   "id": "d62ddf68",
    "metadata": {
     "papermill": {
-     "duration": 0.007676,
-     "end_time": "2023-05-19T10:35:04.029345",
+     "duration": 0.00576,
+     "end_time": "2023-05-19T16:15:04.565363",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.021669",
+     "start_time": "2023-05-19T16:15:04.559603",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Unverified tweets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59f52915",
+   "metadata": {
+    "papermill": {
+     "duration": 0.005423,
+     "end_time": "2023-05-19T16:15:04.576529",
+     "exception": false,
+     "start_time": "2023-05-19T16:15:04.571106",
      "status": "completed"
     },
     "tags": []
@@ -883,19 +883,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7a0d1bec",
+   "id": "004a3ebd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:04.047498Z",
-     "iopub.status.busy": "2023-05-19T10:35:04.046844Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.079618Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.078360Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.589879Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.589118Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.621513Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.620513Z"
     },
     "papermill": {
-     "duration": 0.044072,
-     "end_time": "2023-05-19T10:35:04.081876",
+     "duration": 0.041431,
+     "end_time": "2023-05-19T16:15:04.623777",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.037804",
+     "start_time": "2023-05-19T16:15:04.582346",
      "status": "completed"
     },
     "tags": []
@@ -1158,13 +1158,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c36fe57",
+   "id": "1bc065eb",
    "metadata": {
     "papermill": {
-     "duration": 0.00824,
-     "end_time": "2023-05-19T10:35:04.099085",
+     "duration": 0.005832,
+     "end_time": "2023-05-19T16:15:04.635905",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.090845",
+     "start_time": "2023-05-19T16:15:04.630073",
      "status": "completed"
     },
     "tags": []
@@ -1175,13 +1175,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaac296e",
+   "id": "0f7d74db",
    "metadata": {
     "papermill": {
-     "duration": 0.00829,
-     "end_time": "2023-05-19T10:35:04.115887",
+     "duration": 0.008724,
+     "end_time": "2023-05-19T16:15:04.651849",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.107597",
+     "start_time": "2023-05-19T16:15:04.643125",
      "status": "completed"
     },
     "tags": []
@@ -1193,19 +1193,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e32eeed6",
+   "id": "8d6a11a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:04.134712Z",
-     "iopub.status.busy": "2023-05-19T10:35:04.134332Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.145030Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.143793Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.667943Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.666751Z",
+     "iopub.status.idle": "2023-05-19T16:15:04.677141Z",
+     "shell.execute_reply": "2023-05-19T16:15:04.676198Z"
     },
     "papermill": {
-     "duration": 0.022877,
-     "end_time": "2023-05-19T10:35:04.147209",
+     "duration": 0.019824,
+     "end_time": "2023-05-19T16:15:04.679149",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.124332",
+     "start_time": "2023-05-19T16:15:04.659325",
      "status": "completed"
     },
     "tags": []
@@ -1240,19 +1240,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa735e69",
+   "id": "293320f4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:04.166572Z",
-     "iopub.status.busy": "2023-05-19T10:35:04.166114Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.554661Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.553418Z"
+     "iopub.execute_input": "2023-05-19T16:15:04.693920Z",
+     "iopub.status.busy": "2023-05-19T16:15:04.693135Z",
+     "iopub.status.idle": "2023-05-19T16:15:05.066313Z",
+     "shell.execute_reply": "2023-05-19T16:15:05.065081Z"
     },
     "papermill": {
-     "duration": 0.401215,
-     "end_time": "2023-05-19T10:35:04.557152",
+     "duration": 0.383146,
+     "end_time": "2023-05-19T16:15:05.069065",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.155937",
+     "start_time": "2023-05-19T16:15:04.685919",
      "status": "completed"
     },
     "tags": []
@@ -1288,13 +1288,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5123c895",
+   "id": "5377d1fc",
    "metadata": {
     "papermill": {
-     "duration": 0.00957,
-     "end_time": "2023-05-19T10:35:04.576780",
+     "duration": 0.007003,
+     "end_time": "2023-05-19T16:15:05.084364",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.567210",
+     "start_time": "2023-05-19T16:15:05.077361",
      "status": "completed"
     },
     "tags": []
@@ -1306,19 +1306,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e18bce55",
+   "id": "901b6875",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:04.597783Z",
-     "iopub.status.busy": "2023-05-19T10:35:04.597353Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.607180Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.606052Z"
+     "iopub.execute_input": "2023-05-19T16:15:05.100829Z",
+     "iopub.status.busy": "2023-05-19T16:15:05.099804Z",
+     "iopub.status.idle": "2023-05-19T16:15:05.108181Z",
+     "shell.execute_reply": "2023-05-19T16:15:05.107393Z"
     },
     "papermill": {
-     "duration": 0.023074,
-     "end_time": "2023-05-19T10:35:04.609524",
+     "duration": 0.018651,
+     "end_time": "2023-05-19T16:15:05.110068",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.586450",
+     "start_time": "2023-05-19T16:15:05.091417",
      "status": "completed"
     },
     "tags": []
@@ -1353,19 +1353,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1e4d48ee",
+   "id": "7f49cd43",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T10:35:04.631410Z",
-     "iopub.status.busy": "2023-05-19T10:35:04.630916Z",
-     "iopub.status.idle": "2023-05-19T10:35:04.972341Z",
-     "shell.execute_reply": "2023-05-19T10:35:04.971172Z"
+     "iopub.execute_input": "2023-05-19T16:15:05.126643Z",
+     "iopub.status.busy": "2023-05-19T16:15:05.126053Z",
+     "iopub.status.idle": "2023-05-19T16:15:05.403061Z",
+     "shell.execute_reply": "2023-05-19T16:15:05.402055Z"
     },
     "papermill": {
-     "duration": 0.355621,
-     "end_time": "2023-05-19T10:35:04.975072",
+     "duration": 0.287676,
+     "end_time": "2023-05-19T16:15:05.405161",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.619451",
+     "start_time": "2023-05-19T16:15:05.117485",
      "status": "completed"
     },
     "tags": []
@@ -1401,20 +1401,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "abe4b4d2",
+   "execution_count": 12,
+   "id": "f506e05f",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-05-19T16:15:05.423444Z",
+     "iopub.status.busy": "2023-05-19T16:15:05.422661Z",
+     "iopub.status.idle": "2023-05-19T16:15:05.522632Z",
+     "shell.execute_reply": "2023-05-19T16:15:05.521627Z"
+    },
     "papermill": {
-     "duration": 0.01058,
-     "end_time": "2023-05-19T10:35:04.996682",
+     "duration": 0.111784,
+     "end_time": "2023-05-19T16:15:05.525141",
      "exception": false,
-     "start_time": "2023-05-19T10:35:04.986102",
+     "start_time": "2023-05-19T16:15:05.413357",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'SCOOP:': 6,\n",
+       " 'Amazon': 8,\n",
+       " 'has': 8,\n",
+       " 'gone': 6,\n",
+       " 'on': 9,\n",
+       " 'the': 6,\n",
+       " 'record': 6,\n",
+       " 'to': 14,\n",
+       " 'deny': 6,\n",
+       " 'that': 8,\n",
+       " 'it': 8,\n",
+       " 'will': 8,\n",
+       " 'challenge': 8,\n",
+       " 'Cisco': 10,\n",
+       " 'by': 9,\n",
+       " 'selling': 7,\n",
+       " 'network': 6,\n",
+       " 'switches': 6,\n",
+       " 'other': 6,\n",
+       " 'busi…': 1,\n",
+       " 'https://t.co/S3koeNjq0j': 1,\n",
+       " 'RT': 6,\n",
+       " '@jowens510:': 5,\n",
+       " 'businesses.': 5,\n",
+       " 'h…': 5,\n",
+       " '$CSCO': 6,\n",
+       " 'stock': 1,\n",
+       " 'now': 1,\n",
+       " 'up': 4,\n",
+       " '3%': 1,\n",
+       " 'in': 2,\n",
+       " 'after-hours': 1,\n",
+       " 'trading.': 1,\n",
+       " 'Now': 2,\n",
+       " '3.65%': 2,\n",
+       " 'after': 2,\n",
+       " 'hours': 3,\n",
+       " 'report': 2,\n",
+       " 'denying': 2,\n",
+       " '$AMZN': 4,\n",
+       " 'current': 2,\n",
+       " 'plans': 2,\n",
+       " 'compete': 2,\n",
+       " 'directly': 2,\n",
+       " 'with': 3,\n",
+       " 'sel…': 1,\n",
+       " 'https://t.co/GZYUKstOzy': 1,\n",
+       " 'Nice': 1,\n",
+       " 'scoop': 1,\n",
+       " '@MarketWatch': 1,\n",
+       " 'tech': 1,\n",
+       " 'editor': 1,\n",
+       " '@jowens510': 1,\n",
+       " 'https://t.co/WC1LZljszE': 1,\n",
+       " 'https://t.co/tzaYzlB3EC': 1,\n",
+       " 'Exclusive:': 2,\n",
+       " 'denies': 2,\n",
+       " 'switch': 1,\n",
+       " 'sales': 1,\n",
+       " 'via': 1,\n",
+       " '@YahooFinance': 1,\n",
+       " '-': 1,\n",
+       " '$ANET': 1,\n",
+       " '@MattRosoff:': 1,\n",
+       " 'swi…': 1,\n",
+       " 'Systems': 1,\n",
+       " 'Inc.': 1,\n",
+       " '2.49%': 1,\n",
+       " 'After': 1,\n",
+       " 'trade': 1,\n",
+       " 'news.......': 1,\n",
+       " 'C…': 1,\n",
+       " 'https://t.co/FBqlluFdQR': 1}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt = {}\n",
+    "all_names = stock_data['company_names'].unique()\n",
+    "for company_names in all_names:\n",
+    "    cnt[company_names] = {}\n",
+    "    \n",
+    "def wordcnt(row):\n",
+    "    a = row.text\n",
+    "    a = a.split()\n",
+    "    for word in a:\n",
+    "        #print(cnt[row['company_names']][word]\n",
+    "        if not word in cnt[row['company_names']]:\n",
+    "            cnt[row['company_names']][word] = 1\n",
+    "        else:\n",
+    "            cnt[row['company_names']][word] += 1\n",
+    "    return row\n",
+    "stock_data.apply(wordcnt, axis ='columns')\n",
+    "\n",
+    "cnt['Cisco Systems']\n"
+   ]
   }
  ],
  "metadata": {
@@ -1437,14 +1545,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 16.381572,
-   "end_time": "2023-05-19T10:35:05.931246",
+   "duration": 12.891095,
+   "end_time": "2023-05-19T16:15:06.359616",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-19T10:34:49.549674",
+   "start_time": "2023-05-19T16:14:53.468521",
    "version": "2.4.0"
   }
  },
