Kaggle Notebook | Financial Tweets analysis practice | Version 15

--- a/financial-tweets-analysis-practice.ipynb
+++ b/financial-tweets-analysis-practice.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a42c758f",
+   "id": "f9b580da",
    "metadata": {
     "papermill": {
-     "duration": 0.004896,
-     "end_time": "2023-05-19T16:15:02.802255",
+     "duration": 0.007323,
+     "end_time": "2023-05-19T16:18:15.930414",
      "exception": false,
-     "start_time": "2023-05-19T16:15:02.797359",
+     "start_time": "2023-05-19T16:18:15.923091",
      "status": "completed"
     },
     "tags": []
@@ -20,19 +20,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12595326",
+   "id": "add5da7b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:02.813042Z",
-     "iopub.status.busy": "2023-05-19T16:15:02.812672Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.332607Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.331605Z"
+     "iopub.execute_input": "2023-05-19T16:18:15.945704Z",
+     "iopub.status.busy": "2023-05-19T16:18:15.945323Z",
+     "iopub.status.idle": "2023-05-19T16:18:17.785514Z",
+     "shell.execute_reply": "2023-05-19T16:18:17.784242Z"
     },
     "papermill": {
-     "duration": 1.527741,
-     "end_time": "2023-05-19T16:15:04.334706",
+     "duration": 1.851085,
+     "end_time": "2023-05-19T16:18:17.788315",
      "exception": false,
-     "start_time": "2023-05-19T16:15:02.806965",
+     "start_time": "2023-05-19T16:18:15.937230",
      "status": "completed"
     },
     "tags": []
@@ -197,13 +197,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c67687e",
+   "id": "2c40dd81",
    "metadata": {
     "papermill": {
-     "duration": 0.004469,
-     "end_time": "2023-05-19T16:15:04.344228",
+     "duration": 0.006991,
+     "end_time": "2023-05-19T16:18:17.802894",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.339759",
+     "start_time": "2023-05-19T16:18:17.795903",
      "status": "completed"
     },
     "tags": []
@@ -214,13 +214,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f58b792",
+   "id": "68262007",
    "metadata": {
     "papermill": {
-     "duration": 0.004523,
-     "end_time": "2023-05-19T16:15:04.353380",
+     "duration": 0.007003,
+     "end_time": "2023-05-19T16:18:17.817161",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.348857",
+     "start_time": "2023-05-19T16:18:17.810158",
      "status": "completed"
     },
     "tags": []
@@ -232,19 +232,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3f8c7911",
+   "id": "02eb126a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.364019Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.363654Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.406821Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.405521Z"
+     "iopub.execute_input": "2023-05-19T16:18:17.834263Z",
+     "iopub.status.busy": "2023-05-19T16:18:17.833361Z",
+     "iopub.status.idle": "2023-05-19T16:18:17.902586Z",
+     "shell.execute_reply": "2023-05-19T16:18:17.901231Z"
     },
     "papermill": {
-     "duration": 0.05083,
-     "end_time": "2023-05-19T16:15:04.408840",
+     "duration": 0.080798,
+     "end_time": "2023-05-19T16:18:17.905175",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.358010",
+     "start_time": "2023-05-19T16:18:17.824377",
      "status": "completed"
     },
     "tags": []
@@ -279,19 +279,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75d5bc90",
+   "id": "7db5deec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.424474Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.424091Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.427857Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.427137Z"
+     "iopub.execute_input": "2023-05-19T16:18:17.923642Z",
+     "iopub.status.busy": "2023-05-19T16:18:17.923118Z",
+     "iopub.status.idle": "2023-05-19T16:18:17.929505Z",
+     "shell.execute_reply": "2023-05-19T16:18:17.927696Z"
     },
     "papermill": {
-     "duration": 0.014253,
-     "end_time": "2023-05-19T16:15:04.429886",
+     "duration": 0.019569,
+     "end_time": "2023-05-19T16:18:17.932475",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.415633",
+     "start_time": "2023-05-19T16:18:17.912906",
      "status": "completed"
     },
     "tags": []
@@ -304,19 +304,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4f7d1abf",
+   "id": "e28ac523",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.441403Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.441054Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.447048Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.446089Z"
+     "iopub.execute_input": "2023-05-19T16:18:17.950696Z",
+     "iopub.status.busy": "2023-05-19T16:18:17.950251Z",
+     "iopub.status.idle": "2023-05-19T16:18:17.958272Z",
+     "shell.execute_reply": "2023-05-19T16:18:17.956574Z"
     },
     "papermill": {
-     "duration": 0.014035,
-     "end_time": "2023-05-19T16:15:04.449067",
+     "duration": 0.020352,
+     "end_time": "2023-05-19T16:18:17.961053",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.435032",
+     "start_time": "2023-05-19T16:18:17.940701",
      "status": "completed"
     },
     "tags": []
@@ -343,19 +343,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b688ff3",
+   "id": "37373641",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.460542Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.460238Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.514785Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.513595Z"
+     "iopub.execute_input": "2023-05-19T16:18:17.979283Z",
+     "iopub.status.busy": "2023-05-19T16:18:17.978310Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.058497Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.057126Z"
     },
     "papermill": {
-     "duration": 0.062724,
-     "end_time": "2023-05-19T16:15:04.516799",
+     "duration": 0.092369,
+     "end_time": "2023-05-19T16:18:18.061149",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.454075",
+     "start_time": "2023-05-19T16:18:17.968780",
      "status": "completed"
     },
     "tags": []
@@ -588,19 +588,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "06677500",
+   "id": "6183e1dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.530328Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.530002Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.551513Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.550543Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.079334Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.078612Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.108671Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.106775Z"
     },
     "papermill": {
-     "duration": 0.031125,
-     "end_time": "2023-05-19T16:15:04.553769",
+     "duration": 0.042234,
+     "end_time": "2023-05-19T16:18:18.111538",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.522644",
+     "start_time": "2023-05-19T16:18:18.069304",
      "status": "completed"
     },
     "tags": []
@@ -848,13 +848,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62ddf68",
+   "id": "3bbc69d3",
    "metadata": {
     "papermill": {
-     "duration": 0.00576,
-     "end_time": "2023-05-19T16:15:04.565363",
+     "duration": 0.008536,
+     "end_time": "2023-05-19T16:18:18.129336",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.559603",
+     "start_time": "2023-05-19T16:18:18.120800",
      "status": "completed"
     },
     "tags": []
@@ -865,13 +865,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f52915",
+   "id": "1e82aa57",
    "metadata": {
     "papermill": {
-     "duration": 0.005423,
-     "end_time": "2023-05-19T16:15:04.576529",
+     "duration": 0.008177,
+     "end_time": "2023-05-19T16:18:18.145964",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.571106",
+     "start_time": "2023-05-19T16:18:18.137787",
      "status": "completed"
     },
     "tags": []
@@ -883,19 +883,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "004a3ebd",
+   "id": "f8c99d60",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.589879Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.589118Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.621513Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.620513Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.165203Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.164525Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.195853Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.195077Z"
     },
     "papermill": {
-     "duration": 0.041431,
-     "end_time": "2023-05-19T16:15:04.623777",
+     "duration": 0.043426,
+     "end_time": "2023-05-19T16:18:18.198003",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.582346",
+     "start_time": "2023-05-19T16:18:18.154577",
      "status": "completed"
     },
     "tags": []
@@ -1158,13 +1158,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc065eb",
+   "id": "0fb7f02e",
    "metadata": {
     "papermill": {
-     "duration": 0.005832,
-     "end_time": "2023-05-19T16:15:04.635905",
+     "duration": 0.008714,
+     "end_time": "2023-05-19T16:18:18.215735",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.630073",
+     "start_time": "2023-05-19T16:18:18.207021",
      "status": "completed"
     },
     "tags": []
@@ -1175,13 +1175,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f7d74db",
+   "id": "45dda576",
    "metadata": {
     "papermill": {
-     "duration": 0.008724,
-     "end_time": "2023-05-19T16:15:04.651849",
+     "duration": 0.008811,
+     "end_time": "2023-05-19T16:18:18.233533",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.643125",
+     "start_time": "2023-05-19T16:18:18.224722",
      "status": "completed"
     },
     "tags": []
@@ -1193,19 +1193,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8d6a11a4",
+   "id": "315de922",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.667943Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.666751Z",
-     "iopub.status.idle": "2023-05-19T16:15:04.677141Z",
-     "shell.execute_reply": "2023-05-19T16:15:04.676198Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.253024Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.252617Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.264088Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.262938Z"
     },
     "papermill": {
-     "duration": 0.019824,
-     "end_time": "2023-05-19T16:15:04.679149",
+     "duration": 0.024103,
+     "end_time": "2023-05-19T16:18:18.266560",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.659325",
+     "start_time": "2023-05-19T16:18:18.242457",
      "status": "completed"
     },
     "tags": []
@@ -1240,19 +1240,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "293320f4",
+   "id": "1262a1b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:04.693920Z",
-     "iopub.status.busy": "2023-05-19T16:15:04.693135Z",
-     "iopub.status.idle": "2023-05-19T16:15:05.066313Z",
-     "shell.execute_reply": "2023-05-19T16:15:05.065081Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.287694Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.287279Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.687956Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.686788Z"
     },
     "papermill": {
-     "duration": 0.383146,
-     "end_time": "2023-05-19T16:15:05.069065",
+     "duration": 0.414898,
+     "end_time": "2023-05-19T16:18:18.690775",
      "exception": false,
-     "start_time": "2023-05-19T16:15:04.685919",
+     "start_time": "2023-05-19T16:18:18.275877",
      "status": "completed"
     },
     "tags": []
@@ -1288,13 +1288,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5377d1fc",
+   "id": "1d36e4a2",
    "metadata": {
     "papermill": {
-     "duration": 0.007003,
-     "end_time": "2023-05-19T16:15:05.084364",
+     "duration": 0.010509,
+     "end_time": "2023-05-19T16:18:18.711775",
      "exception": false,
-     "start_time": "2023-05-19T16:15:05.077361",
+     "start_time": "2023-05-19T16:18:18.701266",
      "status": "completed"
     },
     "tags": []
@@ -1306,19 +1306,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "901b6875",
+   "id": "2fd20b82",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:05.100829Z",
-     "iopub.status.busy": "2023-05-19T16:15:05.099804Z",
-     "iopub.status.idle": "2023-05-19T16:15:05.108181Z",
-     "shell.execute_reply": "2023-05-19T16:15:05.107393Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.734167Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.733775Z",
+     "iopub.status.idle": "2023-05-19T16:18:18.743325Z",
+     "shell.execute_reply": "2023-05-19T16:18:18.742334Z"
     },
     "papermill": {
-     "duration": 0.018651,
-     "end_time": "2023-05-19T16:15:05.110068",
+     "duration": 0.023325,
+     "end_time": "2023-05-19T16:18:18.745477",
      "exception": false,
-     "start_time": "2023-05-19T16:15:05.091417",
+     "start_time": "2023-05-19T16:18:18.722152",
      "status": "completed"
     },
     "tags": []
@@ -1353,19 +1353,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7f49cd43",
+   "id": "194bacd2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:05.126643Z",
-     "iopub.status.busy": "2023-05-19T16:15:05.126053Z",
-     "iopub.status.idle": "2023-05-19T16:15:05.403061Z",
-     "shell.execute_reply": "2023-05-19T16:15:05.402055Z"
+     "iopub.execute_input": "2023-05-19T16:18:18.769000Z",
+     "iopub.status.busy": "2023-05-19T16:18:18.767986Z",
+     "iopub.status.idle": "2023-05-19T16:18:19.096810Z",
+     "shell.execute_reply": "2023-05-19T16:18:19.095703Z"
     },
     "papermill": {
-     "duration": 0.287676,
-     "end_time": "2023-05-19T16:15:05.405161",
+     "duration": 0.34326,
+     "end_time": "2023-05-19T16:18:19.099343",
      "exception": false,
-     "start_time": "2023-05-19T16:15:05.117485",
+     "start_time": "2023-05-19T16:18:18.756083",
      "status": "completed"
     },
     "tags": []
@@ -1400,21 +1400,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b306074e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.010962,
+     "end_time": "2023-05-19T16:18:19.121648",
+     "exception": false,
+     "start_time": "2023-05-19T16:18:19.110686",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# **Text analysis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbc127da",
+   "metadata": {
+    "papermill": {
+     "duration": 0.011455,
+     "end_time": "2023-05-19T16:18:19.144365",
+     "exception": false,
+     "start_time": "2023-05-19T16:18:19.132910",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "**Frequencies of words referred to a company**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f506e05f",
+   "id": "6928fb31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-05-19T16:15:05.423444Z",
-     "iopub.status.busy": "2023-05-19T16:15:05.422661Z",
-     "iopub.status.idle": "2023-05-19T16:15:05.522632Z",
-     "shell.execute_reply": "2023-05-19T16:15:05.521627Z"
+     "iopub.execute_input": "2023-05-19T16:18:19.169321Z",
+     "iopub.status.busy": "2023-05-19T16:18:19.168919Z",
+     "iopub.status.idle": "2023-05-19T16:18:19.305028Z",
+     "shell.execute_reply": "2023-05-19T16:18:19.303854Z"
     },
     "papermill": {
-     "duration": 0.111784,
-     "end_time": "2023-05-19T16:15:05.525141",
+     "duration": 0.151919,
+     "end_time": "2023-05-19T16:18:19.307944",
      "exception": false,
-     "start_time": "2023-05-19T16:15:05.413357",
+     "start_time": "2023-05-19T16:18:19.156025",
      "status": "completed"
     },
     "tags": []
@@ -1545,14 +1579,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.891095,
-   "end_time": "2023-05-19T16:15:06.359616",
+   "duration": 17.414486,
+   "end_time": "2023-05-19T16:18:20.342026",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-19T16:14:53.468521",
+   "start_time": "2023-05-19T16:18:02.927540",
    "version": "2.4.0"
   }
  },
